--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<h2>My Portfolio Project</h2>
+My Portfolio Project
 
-<p>This is a basic level portfolio project that is made using HTML, CSS and JavaScript</p>
-<p>This has been created for Project Based Learning and was used as a mini project in my course of Web Programming (BCSE203E) at VIT Vellore</p>
+This is a basic level portfolio project that is made using HTML, CSS and JavaScript
+This has been created for Project Based Learning and was used as a mini project in my course of Web Programming (BCSE203E) at VIT Vellore
